css/style.css
body {
	margin: 0;
  background-color: #EEEEEE;
  color: #999999;
  font-family:  sans-serif;
  font-weight: 300;
}

h1, h2, h3, h4, h5, h6 {
	color: #555555;
	font-weight: 400;
  font-family: 'Economica', sans-serif;
}

a:focus { 
    outline: none; 
}

footer {
	background-color: #333333;
    padding: 10px;
    text-align: center;
    text-transform: uppercase;
}
.alt{
   margin-top: 5px;
}

.fb .btn {
  background-color: #3B5998;
  border-color: #9F418F;
  margin-top: 5px;
}

.gmail .btn{
  background-color: #dd4b39;
  border-color: #dd4b39;
  margin-right: 23px;
}
/******************************************
			 Navigation Modification
*******************************************/
.nav {
	margin-bottom: 0;
}

.navbar-left {
	background-color: #333334;
    border: medium none;
    height: 100%;
    left: 0;
    position: fixed;
    top: 0;
    z-index: 1000;
}

.navbar-left ul li {
	position: relative;
}

.navbar-left ul li a:link,
.navbar-left ul li a:visited {
	color: #999999;
	font-size: 18px;
	padding: 15px;
}

.navbar-left ul li a:hover,
.navbar-left ul li a:focus {
	background: none;
}

.navbar-left ul li a.enabled {
	color: #FFFFFF;
}

.navbar-left .enabled .arrow {
	background-color: #333334;
    border: none;
    width: 15px;
    height: 15px;
    position: absolute;
    right: -8px;
    bottom: 20px;
    transform:rotate(225deg);
    -ms-transform:rotate(225deg); /* IE 9 */
    -webkit-transform:rotate(225deg); /* Safari and Chrome */
}


/*********************************
  Carousel Bootstrap Override
*********************************/

.intro{
  padding-bottom: 400px;
}

.wordwrap { 
   white-space: pre-wrap;      /* CSS3 */   
   white-space: -moz-pre-wrap; /* Firefox */    
   white-space: -pre-wrap;     /* Opera <7 */   
   white-space: -o-pre-wrap;   /* Opera 7 */    
   word-wrap: break-word;
   border-radius: 0px;
   /*width:205px;*/
}


.bds{
    background-color: hsl(114, 100%, 26%) !important;
  background-repeat: repeat-x;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#2bff14", endColorstr="#0d8400");
  background-image: -khtml-gradient(linear, left top, left bottom, from(#2bff14), to(#0d8400));
  background-image: -moz-linear-gradient(top, #2bff14, #0d8400);
  background-image: -ms-linear-gradient(top, #2bff14, #0d8400);
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #2bff14), color-stop(100%, #0d8400));
  background-image: -webkit-linear-gradient(top, #2bff14, #0d8400);
  background-image: -o-linear-gradient(top, #2bff14, #0d8400);
  background-image: linear-gradient(#2bff14, #0d8400);
  border-color: #0d8400 #0d8400 hsl(114, 100%, 19%);
  color: #fff !important;
  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.46);
  -webkit-font-smoothing: antialiased;

    /*background: none repeat scroll 0 0 #666666;
    border: none;
    text-transform: uppercase;
    border-radius: 4px 4px 4px 4px;
    cursor: pointer;
    display: inline-block;
    font-size: 13px;
    font-weight: bold;
    line-height: 13px;
    margin-bottom: 5px;
    outline: 0 none;
    overflow: visible;
    padding: 12px 20px;
    position: relative;
    text-decoration: none;
    text-shadow: none;
    transition: all 0.3s ease 0s;*/
}

.entre{
    background-color: hsl(114, 100%, 26%) !important;
  background-repeat: repeat-x;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#2bff14", endColorstr="#0d8400");
  background-image: -khtml-gradient(linear, left top, left bottom, from(#2bff14), to(#0d8400));
  background-image: -moz-linear-gradient(top, #2bff14, #0d8400);
  background-image: -ms-linear-gradient(top, #2bff14, #0d8400);
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #2bff14), color-stop(100%, #0d8400));
  background-image: -webkit-linear-gradient(top, #2bff14, #0d8400);
  background-image: -o-linear-gradient(top, #2bff14, #0d8400);
  background-image: linear-gradient(#2bff14, #0d8400);
  border-color: #0d8400 #0d8400 hsl(114, 100%, 19%);
  color: #fff !important;
  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.46);
  -webkit-font-smoothing: antialiased;
}



.signup{
  padding-top:15px; 
  font-size:24px
}

/*********************************
	Some Bootstrap Override
*********************************/
.well {
    background-color: #DDDDDD;
    border: 1px solid #CCCCCC;
    border-radius: 4px 4px 4px 4px;
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05) inset;
    color: #666666;
    margin-bottom: 20px;
    min-height: 20px;
    padding: 8px 20px;
}

.well h3 {
	margin: 0;
	color: #666666 !important;
}

hr {
	border: none;
  border-top: 3px solid black;
}

textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input {
    background-color: #DDDDDD;
    color: #333333;
    border: 1px solid #CCCCCC;
    transition: border 0.2s linear 0s, box-shadow 0.2s linear 0s;
}

input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input {
	height: 40px;
    line-height: 40px;
    margin-bottom: 27px;
}

.btn{
   font-size: 16px;
   padding: 10px;
   margin-top: 5px;
}

.btn-theme {

	background: none repeat scroll 0 0 #2bff14;
    border: none;
    color: #FFFFFF;
    text-transform: uppercase;
    border-radius: 4px 4px 4px 4px;
    cursor: pointer;
    display: inline-block;
    font-size: 19px;
    font-weight: bold;
    line-height: 17px;
    margin-bottom: 5px;
    outline: 0 none;
    overflow: visible;
    padding: 12px 20px;
    position: relative;
    text-decoration: none;
    text-shadow: none;
    transition: all 0.3s ease 0s;
}

.btn-theme:hover {
	color: #333333;
	background-color: #999999;
}

/**********************************
	 Scroll to Top link 
***********************************/
#scrollToTop {
	width: 40px;
	height: 40px;
	line-height: 40px;
	background-color: #111111;
	color: #666666;
	position: fixed;
	bottom: 0;
	right: 0;
	text-align: center;
	display: none;
	cursor: pointer;
	transition:all 0.3s;
	z-index: 10000;
}

#scrollToTop:hover {
	text-decoration: none;
	background-color: #000000;
	color: #999999;
}

/*******************************
	Social Media links 
********************************/
.social-btn {
	display: block;
  float: left;
  padding: 4px 5px;
}

/********************************
 Main Sections and Content Area
*********************************/
#page1 {
  background: #000000 center center fixed;
  opacity: .9; 
}

#page1 h1 {
  background-color:#FFFFFF;
  color:#666666;
  display:inline-block;
  font-size:50px;
  font-weight:200;
  line-height:1.1em;
  margin:0;
  opacity:0.8;
  padding:20px;
  text-align:center;
  text-shadow:none;
  width:100%;
}

.caption {
  -webkit-transition:all 500ms linear;
  background-image:none;
  background-position:initial initial;
  background-repeat:initial initial;
  margin:0 20% 0 0;
  opacity:0.9;
  padding:60px 0;
  transition:all 500ms linear;
}

#page3,
#page5 {
  background-color: #EEEEEE;
}

#page3 h1,
#page5 h1 {
  /*color: #FFFFFF;*/
}

.window {
  height: 300px;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

#window1 {
  background: transparent url(../img/image02.jpg) center center fixed;
}

#window2 {
  background: transparent url(../img/image03.jpg) center center fixed;
}

#window3 {
  background: transparent url(../img/image04.jpg) center center fixed;
}

.pricing h1 {
  font-size: 45px !important;
}

.pricing p {
  padding: 10px 0;
  border-bottom: 1px dotted #666666;
}

.page {
  position: relative;
  padding: 0px 0;
  font-size: 18px;
  font-weight: 100;
  line-height: 1.5;
}

.page h1 {
	font-size: 80px;
  letter-spacing: 0.12em;
  line-height: 90px;
  margin: 25px 0;
}

.page h2 {
  margin: 25px 0;
  font-size: 29px;
  letter-spacing: 0.08em;
  line-height: 29px;
}

.page h3 {
	font-weight: 100;
	margin-bottom: 30px;
	color: #999999;
}

.page .content-byline {
  color:#999999;
  font-size:20px;
  font-weight:300;
  line-height:1.25;
  margin-bottom:40px;
}

.page img {
	margin: 5px auto;
	border-radius: 4px;
}

.center {
	text-align: center;
}

.left {
	text-align: left;
}

.right {
	text-align: right;
}

.large {
	font-size: 26px;
}


/*********************************
		Responsive Hacks
*********************************/
@media (max-width: 480px) {
	html, body {
		overflow-x:hidden;
	}

  #page1 h1 {
    font-size: 35px !important;
  }

  #scrollToTop {
    top: 0;
    bottom: auto;
    right: 0;
  }
}

@media (max-width: 768px) {
  .container {
    padding-left: 20px;
    padding-right: 20px;
  }

  .window {
    height: 100px;
  }
}


@media (max-width: 1170px) {
  .navbar-left {
    bottom: 0;
    top:auto;
    width: 100%;
    height: 32px;
  }

  .navbar-left ul li a:link,
  .navbar-left ul li a:visited {
    font-size: 18px;
    padding: 5px 7px;
    float: left;
  }

  .navbar-left .enabled .arrow {
    display: none;
  }

  .window {
    height: 200px;
  }

  #page1 h1 {
    font-size: 30px;
  }

  .pricing h1 {
    font-size: 20px !important;
  }

  .page h1 {
    font-size:30px;
    line-height: 1;
    margin: 20px 0;
  }

  .page h2 {
    font-size:18px;
    line-height: 1.2;
    margin: 10px 0;
  }

  .page h3 {
    line-height: 1;
    font-size:16px;
  }

  .page p {
    font-size: 17px;
  }
}

